--- a/cubes.html
+++ b/cubes.html
@@ -2405,7 +2405,163 @@
           </div>
           <!-- ========================= -->
           <!-- BASES LEGUMES -->
-          <!-- ========================= -->
+          <!-- ==== <div
+            class="col-12 col-lg-6 recipe"
+            data-recipe-id="haricots"
+            data-tags="légumes haricots proteine"
+          >
+            <div class="card recipe-card">
+              <div class="card-body">
+                <div class="d-flex flex-wrap gap-2 align-items-center mb-2">
+                  <span class="badge bg-success d-none" data-stock-pill=""
+                    >En stock</span
+                  ><span
+                    class="badge bg-light text-dark border d-none"
+                    data-stock-count=""
+                    >0 portions</span
+                  >
+                  <span class="badge badge-cat">Légumes</span>
+                  <span class="badge text-bg-light tag">tag:proteine</span>
+                  <span class="badge text-bg-light tag">tag:fibres</span>
+                  <span class="badge text-bg-light tag">tag:sans-oignon</span>
+                </div>
+                <h3 class="h5 mb-1">Haricots noirs</h3>
+                <div
+                  class="mt-2 d-flex align-items-center gap-2 stock-controls"
+                  data-stock-controls=""
+                >
+                  <button
+                    aria-label="Diminuer"
+                    class="btn btn-outline-secondary btn-sm px-3 py-2"
+                    data-stock-dec=""
+                    type="button"
+                  >
+                    −
+                  </button>
+                  <div class="mono stock-value px-2" data-stock-value="">0</div>
+                  <button
+                    aria-label="Augmenter"
+                    class="btn btn-primary btn-sm px-3 py-2"
+                    data-stock-inc=""
+                    type="button"
+                  >
+                    +
+                  </button>
+                </div>
+                <button
+                  aria-controls="recDetails-haricots"
+                  aria-expanded="false"
+                  class="btn btn-link p-0 mt-2 text-decoration-none d-flex align-items-center gap-2"
+                  data-bs-target="#recDetails-haricots"
+                  data-bs-toggle="collapse"
+                  data-recipe-toggle="1"
+                  type="button"
+                >
+                  <span class="mono">▶</span
+                  ><span class="small muted">Afficher les détails</span>
+                </button>
+                <div class="collapse mt-3" id="recDetails-haricots">
+                  <div class="muted mb-2">
+                       </div>
+                  <div class="hr-soft"></div>
+                  <div class="smallcaps muted mb-1">Assemblage suggéré</div>
+                  
+                  
+                  <div class="d-flex flex-wrap gap-2">
+                    <span class="badge badge-cost"></span>
+                    <span class="badge badge-nutri"></span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+           <div
+            class="col-12 col-lg-6 recipe"
+            data-recipe-id="burger-haricots"
+            data-tags="Plats principaux burger haricots proteine"
+          >
+            <div class="card recipe-card">
+              <div class="card-body">
+                <div class="d-flex flex-wrap gap-2 align-items-center mb-2">
+                  <span class="badge bg-success d-none" data-stock-pill=""
+                    >En stock</span
+                  ><span
+                    class="badge bg-light text-dark border d-none"
+                    data-stock-count=""
+                    >0 portions</span
+                  >
+                  <span class="badge badge-cat">Plats principaux</span>
+                  <span class="badge badge-cube">Kit</span>
+                  <span class="badge text-bg-light tag">tag:proteine</span>
+                  <span class="badge text-bg-light tag">tag:fibres</span>
+                  <span class="badge text-bg-light tag">tag:sans-oignon</span>
+                </div>
+                <h3 class="h5 mb-1">Burger haricots</h3>
+                <div
+                  class="mt-2 d-flex align-items-center gap-2 stock-controls"
+                  data-stock-controls=""
+                >
+                  <button
+                    aria-label="Diminuer"
+                    class="btn btn-outline-secondary btn-sm px-3 py-2"
+                    data-stock-dec=""
+                    type="button"
+                  >
+                    −
+                  </button>
+                  <div class="mono stock-value px-2" data-stock-value="">0</div>
+                  <button
+                    aria-label="Augmenter"
+                    class="btn btn-primary btn-sm px-3 py-2"
+                    data-stock-inc=""
+                    type="button"
+                  >
+                    +
+                  </button>
+                </div>
+                <button
+                  aria-controls="recDetails-burger-haricots"
+                  aria-expanded="false"
+                  class="btn btn-link p-0 mt-2 text-decoration-none d-flex align-items-center gap-2"
+                  data-bs-target="#recDetails-burger-haricots"
+                  data-bs-toggle="collapse"
+                  data-recipe-toggle="1"
+                  type="button"
+                >
+                  <span class="mono">▶</span
+                  ><span class="small muted">Afficher les détails</span>
+                </button>
+                <div class="collapse mt-3" id="recDetails-burger-haricots">
+                  <div class="muted mb-2">
+                    <span class="mono">Rendement:</span> 6 boulettes 
+                  </div>
+                  <div class="row g-3">
+                    <div class="col-12 col-md-6">
+                      <div class="smallcaps muted mb-1">Ingrédients</div>
+                      <ul class="list-tight"></ul>
+                    </div>
+                    <div class="col-12 col-md-6">
+                      <div class="smallcaps muted mb-1">Étapes</div>
+                      <ol class="list-tight">
+
+                      </ol>
+                    </div>
+                  </div>
+                  <div class="hr-soft"></div>
+                  <div class="smallcaps muted mb-1"></div>
+                  <ul class="list-tight">
+                               </ul>
+                  <div class="smallcaps muted mb-1">
+                    Nutrition et coût, par dîner (demi-pizza)
+                  </div>
+                  <div class="d-flex flex-wrap gap-2">
+                    <span class="badge badge-cost"></span>
+                    <span class="badge badge-nutri"></span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="col-12">
             <h2 class="h4 section-title" id="sec-veg">
               Bases légumes, cubes de 1 tasse
@@ -4070,3 +4226,4 @@
     </script>
   </body>
 </html>
+
