Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/cubes.html
+++ b/cubes.html
@@ -2405,7 +2405,8 @@
           </div>
           <!-- ========================= -->
           <!-- BASES LEGUMES -->
-          <!-- ==== <div
+          <!-- ==== -->
+          <div
             class="col-12 col-lg-6 recipe"
             data-recipe-id="haricots"
             data-tags="légumes haricots proteine"
@@ -4226,4 +4227,5 @@
     </script>
   </body>
 </html>
+
 
